cmake_minimum_required(VERSION 3.5)

project(LD43 LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 17)

set(CMAKE_MODULE_PATH "${PROJECT_SOURCE_DIR}/cmake" ${CMAKE_MODULE_PATH})

set(CMAKE_DEBUG_POSTFIX          "d")
set(CMAKE_MINSIZEREL_POSTFIX     "s")
set(CMAKE_RELWITHDEBINFO_POSTFIX "rd")

set(OUTPUT_BINDIR ${PROJECT_BINARY_DIR}/bin)
file(MAKE_DIRECTORY ${OUTPUT_BINDIR})

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${OUTPUT_BINDIR})
foreach (CONF ${CMAKE_CONFIGURATION_TYPES})
	string(TOUPPER "${CONF}" CONF)
	set("CMAKE_RUNTIME_OUTPUT_DIRECTORY_${CONF}" "${OUTPUT_BINDIR}")
endforeach ()

add_subdirectory(src)
